Avoid too much requests and allow description edits.

--- a/src/signet/style.scss
+++ b/src/signet/style.scss
@@ -47,7 +47,9 @@
 
 		img {
 			max-width: 100%;
+			display: block;
 			padding-bottom: 1em;
+			margin: 0 auto;
 		}
 
 		figcaption {
